Fix for bottom spacing when token is visible

--- a/src/popup/popup.less
+++ b/src/popup/popup.less
@@ -161,7 +161,7 @@ body {
             border-radius: 2px;
             flex-grow: 1;
             font-family: monospace;
-            min-height: 140px;
+            min-height: 110px;
             min-width: 340px;
             padding: 10px;
             white-space: pre;
